--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,4 +1,8 @@
-<div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_screen" %>
+<div class="full_screen">
+  <div class="side-bar">
+    <%= render "side_bar" %>
+  </div>
+  <div class="main_screen">
+    <%= render "main_screen" %>
+  </div>
 </div>
