side_barの見た目の編集

--- a/app/assets/stylesheets/customers.css
+++ b/app/assets/stylesheets/customers.css
@@ -24,3 +24,12 @@
   background-color: #DDDDDD;
   height: 90px;
 }
+
+
+.side-bar-header {
+  height: 100px;
+}
+.client-lists {
+  background-color: #2F3E51;
+  height: calc(100vh - 100px);
+}
