サイドバーのヘッダーレイアウトの仮作成

--- a/app/views/customers/_side_bar.html.erb
+++ b/app/views/customers/_side_bar.html.erb
@@ -1,4 +1,10 @@
 <div class="side-bar-header">
+  <div class="user-name">
+    <a href="#">営業　太郎</a>
+  </div>
+  <div class="logout">
+    <a href="#">ログアウト</a>
+  </div>
 </div>
 
 <div class="client-lists">
