サイドバーの顧客管理画面の仮編集

--- a/app/views/customers/_side_bar.html.erb
+++ b/app/views/customers/_side_bar.html.erb
@@ -8,4 +8,19 @@
 </div>
 
 <div class="client-lists">
+  <div class="client">
+    <div class="client-name">
+      <a href="#">山田　花子</a>
+    </div>
+  </div>
+  <div class="client">
+    <div class="client-name">
+      <a href="#">小林　太郎</a>
+    </div>
+  </div>
+  <div class="client">
+    <div class="client-name">
+      <a href="#">佐藤　一郎</a>
+    </div>
+  </div>
 </div>
