--- a/app/assets/stylesheets/customers.css
+++ b/app/assets/stylesheets/customers.css
@@ -56,4 +56,15 @@
 .client-lists {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
+  padding: 0 20px;
+  overflow: scroll;
+}
+
+.client {
+  padding: 20px 0 40px;
+}
+
+.client-name a {
+  text-decoration: none;
+  color: white;
 }
