--- a/app/assets/stylesheets/customers.css
+++ b/app/assets/stylesheets/customers.css
@@ -62,9 +62,15 @@
 
 .client {
   padding: 20px 0 40px;
+  display: flex;
 }
 
 .client-name a {
   text-decoration: none;
   color: white;
+}
+
+.schedule {
+  color: white;
+  margin-left: 20px;
 }
