--- a/app/views/customers/_main_screen.html.erb
+++ b/app/views/customers/_main_screen.html.erb
@@ -1,4 +1,14 @@
 <div class="main-header">
+  <div class="left-header">
+    <div class="customer-name">
+      山田　花子
+    </div>
+  </div>
+  <div class="right-header">
+    <div class="header-button">
+      <a href="#">編集する</a>
+    </div>
+  </div>
 </div>
 
 <div class="customers-data">
