--- a/app/views/customers/_side_bar.html.erb
+++ b/app/views/customers/_side_bar.html.erb
@@ -1,6 +1,9 @@
 <div class="side-bar-header">
+  <div class="belonging-department">
+    A店
+  </div>
   <div class="user-name">
-    <a href="#">営業　太郎</a>
+    営業　太郎
   </div>
   <div class="logout">
     <a href="#">ログアウト</a>
