メイン画面のスタイル編集

--- a/app/views/customers/_main_screen.html.erb
+++ b/app/views/customers/_main_screen.html.erb
@@ -1,7 +1,7 @@
 <div class="main-header">
   <div class="left-header">
     <div class="customer-name">
-      山田　花子
+      山田　花子様
     </div>
   </div>
   <div class="right-header">
@@ -12,8 +12,37 @@
 </div>
 
 <div class="customers-data">
-  
+  <div class="various-data">
+    <div class="data-item">検討車種</div>
+    <div class="data-content">軽自動車</div>
+  </div>  
+  <div class="various-data">
+    <div class="data-item">検討車種名</div>
+    <div class="data-content">信州ワゴン</div>
+  </div>  
+  <div class="various-data">
+    <div class="data-item">下取りの有無</div>
+    <div class="data-content">無し</div>
+  </div>  
+  <div class="various-data">
+    <div class="data-item">住所</div>
+    <div class="data-content">長野県上田市＊＊＊</div>
+  </div>  
+  <div class="various-data">
+    <div class="data-item">次回予定日</div>
+    <div class="data-content">＊月＊日</div>
+  </div>  
+  <div class="various-data">
+    <div class="data-item">成約の可否</div>
+    <div class="data-content">ーーー</div>
+  </div>  
 </div>
 
 <div class="footer">
+  <div class="memo">MEMO</div>
+  <div class="memo-text">
+    結婚して長野県に来た為車が必要。
+    子供が小さいのでスライドドアの車希望されている。
+    次回来店時、試乗車を用意しておく。
+  </div>
 </div>
