--- a/app/views/customers/_side_bar.html.erb
+++ b/app/views/customers/_side_bar.html.erb
@@ -13,19 +13,19 @@
 <div class="client-lists">
   <div class="client">
     <div class="client-name">
-      <a href="#">山田　花子</a>
+      <a href="#">山田　花子様</a>
     </div>
     <div class="schedule">次回予定　＊月＊日</div>
   </div>
   <div class="client">
     <div class="client-name">
-      <a href="#">小林　太郎</a>
+      <a href="#">小林　太郎様</a>
     </div>
     <div class="schedule">次回予定　＊月＊日</div>
   </div>
   <div class="client">
     <div class="client-name">
-      <a href="#">佐藤　一郎</a>
+      <a href="#">佐藤　一郎様</a>
     </div>
     <div class="schedule">納車予定　＊月＊日</div>
   </div>
