--- a/app/assets/stylesheets/customers.css
+++ b/app/assets/stylesheets/customers.css
@@ -42,11 +42,48 @@
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
 }
+
+.various-data {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.data-item {
+  color: #000;
+  font-weight: bold;
+  width: 140px;
+}
+
+.data-content {
+  margin-left: 10px;
+}
+
 .footer {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
+
+.memo {
+  font-weight: bold;
+  margin: 5px;
+}
+
+.memo-text {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  min-height: 60px;
+  width: 100%;
+  resize: vertical;
+  max-height: 60px; /* 最大高さを制限 */
+  overflow-y: auto; /* テキストがはみ出る場合にスクロールを追加 */
+}
+
 /* メイン画面 */
 
 /* サイドバー */
