--- a/app/assets/stylesheets/customers.css
+++ b/app/assets/stylesheets/customers.css
@@ -80,8 +80,8 @@
   min-height: 60px;
   width: 100%;
   resize: vertical;
-  max-height: 60px; /* 最大高さを制限 */
-  overflow-y: auto; /* テキストがはみ出る場合にスクロールを追加 */
+  max-height: 60px; 
+  overflow-y: auto; 
 }
 
 /* メイン画面 */
