デバイスを利用した新規登録機能とログイン機能の実装準備

--- a/app/views/customers/_main_screen.html.erb
+++ b/app/views/customers/_main_screen.html.erb
@@ -42,7 +42,7 @@
   <div class="memo">MEMO</div>
   <div class="memo-text">
     結婚して長野県に来た為車が必要。
-    子供が小さいのでスライドドアの車希望されている。
+    子供が小さいのでスライドドアの車を希望されている。
     次回来店時、試乗車を用意しておく。
   </div>
 </div>
