--- a/app/views/customers/_side_bar.html.erb
+++ b/app/views/customers/_side_bar.html.erb
@@ -1,3 +1,6 @@
+<%= link_to "新規登録", new_user_registration_path%>
+<%= link_to "ログイン", new_user_session_path%>
+
 <div class="side-bar-header">
   <div class="belonging-department">
     A店
